bandaid fix for grid layout freaking out when boxes were uneven heights

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,7 +51,11 @@
 .inner-topic {
   background-color: lightblue;
   padding: 10px 10px 10px 10px;
+  overflow: hidden;
 
+  .title {
+    white-space: nowrap;
+  }
   // a, small {
   //   position: relative;
   //   left: 5px;
